# maddevs-demo

./: README.md  pyproject.toml
maddevs_demo/: msg_split.py  split_msg.py  tests.py
