[tool.poetry]
name = "maddevs-demo"
version = "0.1.0"
description = ""
authors = ["Alexander Milenko <alexander.milenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
